# adore

./: .gitignore  .gitmodules  CONTRIBUTING.md  CPPLINT.cfg  LICENSE  Makefile  README.md  adore.env  ci.env  deploy.env  requirements.adore_cli.system  setup.sh  utils.mk
.github/: pull_request_template.md
.github/workflows/: ci.yaml  ci_cross_compile_x86_to_arm64.yaml  ci_native_arm64.yaml  ci_native_x86.yaml
adore_scenarios/: README.md
adore_scenarios/assets/: goal_picker.html
adore_scenarios/integration_tests/: state_test_base.py  test_helpers.py  test_mad_simulation.py  test_sad_simulation.py  topic_test_base.py
adore_scenarios/scenario_helpers/: ngc.py  ngc_controller_params.py  simulated_infrastructure.py  simulated_vehicle.py  simulation_controller_params.py  simulation_planner_params.py  visualizer.py
docs/: index.html
docs/css/: adore.css
docs/generated_doxygen_documentation/: graph_legend.html  index.html  navtreedata.js
docs/mkdocs/: 404.html  index.html
documentation/: .aspell.en.pws  .gitignore  Dockerfile.aspell  Makefile  README.md  modules.md  publish.env  publish_gh-pages.sh  quick_start.md  spellcheck.py
documentation/landing_page/: contact.html  contribute.html  documentation.html  getting-started.html  index.html  sponsors.html
documentation/mkdocs/: Dockerfile.mkdocs  mkdocs.yaml
documentation/technical_reference_manual/: CONTRIBUTING.md  README.md  contact.md  licensing.md  quick_start.md  (+1 more)
libraries/: .cmakeignore  CMakeLists.txt  CPPLINT.cfg  Makefile  README.md  adore_libraries.cmake
ros2_workspace/: CPPLINT.cfg  Makefile
ros2_workspace/src/conversions/adore_map_conversions/: CMakeLists.txt  package.xml  requirements.cmake
ros2_workspace/src/conversions/adore_map_conversions/include/: adore_map_conversions.hpp
ros2_workspace/src/conversions/adore_map_conversions/src/: adore_map_conversions.cpp
ros2_workspace/src/example_nodes/ros2_eigen_hello_world/: CMakeLists.txt  README.md  package.xml  requirements.cmake
ros2_workspace/src/example_nodes/ros2_eigen_hello_world/src/: ros2_eigen_hello_world.cpp
ros2_workspace/src/ros2_syslog/: CMakeLists.txt  README.md  build.sh  package.xml  requirements.cmake  run.sh
ros2_workspace/src/ros2_syslog/src/: ros2_syslog.cpp
tools/: adore_setup.sh  git_checkout_selector.py
(+155 files in other folders)
